# incident-agent-eval

./: .gitignore  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
data/eval_sets/: incident_eval_v1.jsonl  safety_eval_v1.jsonl  security_eval_v1.json
data/incidents/: incident_001.json  incident_002.json  incident_003.json  incident_004.json  incident_005.json  incident_006.json  incident_007.json  incident_008.json  incident_009.json  incident_010.json
data/mock_observability/: deploys.jsonl  logs.jsonl  metrics.jsonl  service_owners.json
data/runbooks/: api_latency.md  database_connection_pool.md  elevated_5xx.md  iam_permission_failure.md  incident_severity.md  kubernetes_crashloop.md  logging_pipeline_outage.md  noisy_alert_false_positive.md  regional_degradation.md  rollback_policy.md
docs/: architecture.md  demo_script.md  eval_protocol.md  eval_snapshot.md  langgraph_mode.md  project_walkthrough.md  safety_model.md
prompts/: safety_policy.txt  summary_v1.txt  triage_agent_hardened.txt  triage_agent_v1.txt  triage_agent_v2.txt
reports/: prompt_injection_evaluation.md
reports/security_eval/: baseline_latest.csv  baseline_latest.json  hardened_latest.csv  hardened_latest.json
scripts/: compare_runs.py  doctor.py  inspect_trace.py  run_agent.py  run_eval.py  run_langgraph_agent.py  run_langgraph_eval.py  run_safety_eval.py
src/incident_agent_eval/: __init__.py  agent.py  cli.py  config.py  cost.py  eval_sets.py  evaluators.py  generate_report.py  langgraph_runner.py  llm_client.py  metrics.py  report.py  safety.py  (+8 more)
tests/: test_agent.py  test_cli.py  test_compare_runs.py  test_eval_exports.py  test_eval_sets.py  test_evaluators.py  test_inspect_trace.py  test_langgraph_runner.py  test_llm_client.py  test_package_metadata.py  test_safety.py  test_safety_eval.py  test_schemas.py  test_security_eval.py  test_tools.py
(+2 files in other folders)
