[project]
name = "incident-agent-eval"
version = "0.1.0"
description = "Evaluated read-only AI agent for cloud incident triage"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.80.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "python-dotenv>=1.0.1",
  "rich>=13.7.0",
  "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.8.0",
]
langgraph = [
  "langgraph",
  "langchain-core",
]

[project.scripts]
incident-agent = "incident_agent_eval.cli:run_agent_main"
incident-eval = "incident_agent_eval.cli:run_eval_main"
incident-trace = "incident_agent_eval.cli:inspect_trace_main"
incident-compare = "incident_agent_eval.cli:compare_runs_main"
incident-doctor = "incident_agent_eval.cli:doctor_main"
incident-safety-eval = "incident_agent_eval.cli:run_safety_eval_main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
